UI: Move logo to the opposite side and fix mobile menu visibility by increasing z-index

--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -3,7 +3,7 @@
   top: 50px;
   width: 280px;
   height: calc(100vh - 50px);
-  z-index: 5500;
+  z-index: 9999;
   display: flex;
   flex-direction: column;
   transition: var(--transition);
